// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parsing complex valued instance definition 1`] = `
InstanceDefinitionNode {
  "attributes": {
    "default": false,
    "error": false,
  },
  "bound": BoundConstraintNode {
    "isHidden": false,
    "parameters": [
      NamedTypeNode {
        "isHidden": false,
        "name": "Maybe",
        "parameters": [
          TypeParameterNode {
            "infer": false,
            "isHidden": false,
            "name": "value",
            "value": undefined,
          },
        ],
      },
    ],
    "trait": "Foo",
  },
  "comments": [],
  "constraints": [
    BoundConstraintNode {
      "isHidden": false,
      "parameters": [
        TypeParameterNode {
          "infer": false,
          "isHidden": false,
          "name": "value",
          "value": undefined,
        },
      ],
      "trait": "Foo",
    },
  ],
  "isHidden": false,
  "value": NumberExpressionNode {
    "isHidden": false,
    "value": "3.14",
  },
}
`;

exports[`parsing constant definition 1`] = `
ConstantDefinitionNode {
  "attributes": {
    "unit": false,
  },
  "comments": [],
  "constraints": [
    BoundConstraintNode {
      "isHidden": false,
      "parameters": [
        TypeParameterNode {
          "infer": false,
          "isHidden": false,
          "name": "value",
          "value": undefined,
        },
      ],
      "trait": "Show",
    },
  ],
  "isHidden": false,
  "name": "show",
  "type": FunctionTypeNode {
    "inputs": [
      TypeParameterNode {
        "infer": false,
        "isHidden": false,
        "name": "value",
        "value": undefined,
      },
    ],
    "isHidden": false,
    "output": NamedTypeNode {
      "isHidden": false,
      "name": "Unit",
      "parameters": [],
    },
  },
}
`;

exports[`parsing enumeration type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [],
  "representation": EnumerationTypeRepresentation {
    "variants": [
      VariantDefinition {
        "elements": [
          NamedTypeNode {
            "isHidden": false,
            "name": "Number",
            "parameters": [],
          },
        ],
        "name": "Some",
      },
      VariantDefinition {
        "elements": [],
        "name": "None",
      },
    ],
  },
}
`;

exports[`parsing generic trait definition 1`] = `
TraitDefinitionNode {
  "attributes": {},
  "comments": [],
  "constraints": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [
    TypeParameterNode {
      "infer": false,
      "isHidden": false,
      "name": "value",
      "value": undefined,
    },
  ],
  "type": FunctionTypeNode {
    "inputs": [
      TypeParameterNode {
        "infer": false,
        "isHidden": false,
        "name": "value",
        "value": undefined,
      },
    ],
    "isHidden": false,
    "output": NamedTypeNode {
      "isHidden": false,
      "name": "Number",
      "parameters": [],
    },
  },
}
`;

exports[`parsing generic type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [
    TypeParameterNode {
      "infer": false,
      "isHidden": false,
      "name": "value",
      "value": undefined,
    },
  ],
  "representation": MarkerTypeRepresentation {},
}
`;

exports[`parsing marker type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [],
  "representation": MarkerTypeRepresentation {},
}
`;

exports[`parsing simple valued instance definition 1`] = `
InstanceDefinitionNode {
  "attributes": {
    "default": false,
    "error": false,
  },
  "bound": BoundConstraintNode {
    "isHidden": false,
    "parameters": [
      NamedTypeNode {
        "isHidden": false,
        "name": "Number",
        "parameters": [],
      },
    ],
    "trait": "Foo",
  },
  "comments": [],
  "constraints": [],
  "isHidden": false,
  "value": NumberExpressionNode {
    "isHidden": false,
    "value": "3.14",
  },
}
`;

exports[`parsing structure type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [],
  "representation": StructureTypeRepresentation {
    "fields": [
      FieldDefinition {
        "name": "a",
        "type": NamedTypeNode {
          "isHidden": false,
          "name": "A",
          "parameters": [],
        },
      },
      FieldDefinition {
        "name": "b",
        "type": NamedTypeNode {
          "isHidden": false,
          "name": "B",
          "parameters": [],
        },
      },
    ],
  },
}
`;

exports[`parsing trait definition 1`] = `
TraitDefinitionNode {
  "attributes": {},
  "comments": [],
  "constraints": [],
  "isHidden": false,
  "name": "Foo",
  "parameters": [],
  "type": NamedTypeNode {
    "isHidden": false,
    "name": "Number",
    "parameters": [],
  },
}
`;

exports[`parsing type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [
    " Documentation comment",
  ],
  "isHidden": false,
  "name": "Foo",
  "parameters": [],
  "representation": MarkerTypeRepresentation {},
}
`;
